--- a/package.json
+++ b/package.json
@@ -32,18 +32,22 @@
     "test:update": "npm run jest -- -u",
     "tsc": "tsc --noEmit"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "@ant-design/icons": "^4.8.1",
-    "@ant-design/plots": "^2.1.5",
+    "@ant-design/plots": "^2.1.1",
     "@ant-design/pro-components": "^2.6.44",
-    "@antv/l7": "^2.20.13",
-    "@antv/l7-maps": "^2.20.13",
+    "@antv/l7": "^2.20.5",
+    "@antv/l7-maps": "^2.20.5",
     "@antv/l7-react": "^2.4.3",
     "@umijs/route-utils": "^2.2.2",
-    "antd": "^5.12.7",
+    "antd": "^5.12.2",
     "antd-style": "^3.6.1",
-    "classnames": "^2.5.1",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "numeral": "^2.0.6",
     "omit.js": "^2.0.2",
@@ -63,14 +67,14 @@
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "@types/react-helmet": "^6.1.11",
     "@umijs/fabric": "^2.14.1",
-    "@umijs/lint": "^4.1.0",
-    "@umijs/max": "^4.1.0",
+    "@umijs/lint": "^4.0.89",
+    "@umijs/max": "^4.0.89",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.55.0",
     "express": "^4.18.2",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
@@ -79,7 +83,7 @@
     "mockjs": "^1.1.0",
     "prettier": "^3.1.1",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "prettier-plugin-packagejson": "^2.4.8",
+    "prettier-plugin-packagejson": "^2.4.7",
     "prettier-plugin-two-style-order": "^1.0.1",
     "react-dev-inspector": "^1.9.0",
     "swagger-ui-dist": "^4.19.1",
@@ -87,5 +91,36 @@
     "typescript": "^4.9.5",
     "umi-presets-pro": "^2.0.3"
   },
-  "engines": { "node": ">=12.0.0" }
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "create-umi": {
+    "ignoreScript": [
+      "docker*",
+      "functions*",
+      "site",
+      "generateMock"
+    ],
+    "ignoreDependencies": [
+      "netlify*",
+      "serverless"
+    ],
+    "ignore": [
+      ".dockerignore",
+      ".git",
+      ".github",
+      ".gitpod.yml",
+      "CODE_OF_CONDUCT.md",
+      "Dockerfile",
+      "Dockerfile.*",
+      "lambda",
+      "LICENSE",
+      "netlify.toml",
+      "README.*.md",
+      "azure-pipelines.yml",
+      "docker",
+      "CNAME",
+      "create-umi"
+    ]
+  }
 }
